<resources>
    <string name="app_name">appRegistros</string>
    <string name="txtCorreo">Correo Electrónico</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="btnIngresar">Iniciar Sesión</string>
    <string name="texto_recuperar">Recuperar Contraseña</string>
    <string name="lblOlvidoContraseña">¿Olvidó su contraseña?</string>
    <string name="cboxRecordar">Recordar Datos</string>
    <string name="lblO">O</string>
    <string name="lblOtroInicio">Iniciar sesión con:</string>
    <string name="lblNoTienesCuenta">¿No tienes cuenta?</string>
    <string name="lblRegistrarse">!Registrate Ahora¡</string>
    <string name="lblNoExisteCorreo">El correo no existe!</string>
    <string name="lblExisteCorreo">Enviamos un mensaje a su correo!</string>
    <string name="texto_ayuda">¿Necesitas Ayuda? Presiona aquí!</string>
    <string name="texto_registrarse">Registrarse</string>
    <string name="txtRepetirContraseña">Repetir Contraseña</string>
    <string name="txtNombre">Nombre</string>
    <string name="texto_misgastos">Mis Gastos</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="menu_opciones">Opciones</string>
    <string name="texto_agregar">Agregar registro</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="todo">TODO</string>
    <string name="textoGuardar">Guardar Registro</string>
    <string name="texto1">1</string>
    <string name="texto2">2</string>
    <string name="texto3">3</string>
    <string name="texto4">4</string>
    <string name="texto5">5</string>
    <string name="texto6">6</string>
    <string name="texto7">7</string>
    <string name="texto8">8</string>
    <string name="texto9">9</string>
    <string name="texto0">0</string>
    <string name="textoBorrar">Borrar</string>
    <string name="textoDescOtros">Salidas a comer, a pasear, con amigos o familia, etc.</string>
    <string name="textoOtros">Otros</string>


</resources>