<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="300dp"
            android:layout_height="85dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/user_img" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlack"
            android:ems="10"
            android:hint="@string/txtCorreo"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#595353" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtContraseña"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:hint="@string/txtContraseña"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#595353" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationViewOjo"
                android:layout_width="49dp"
                android:layout_height="match_parent"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/show_pass" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxRecordarDatos"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/cboxRecordar"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/lblOlvideContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblOlvidoContraseña"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:typeface="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="347dp"
            android:layout_height="39dp"
            android:background="@drawable/button_rounded"
            android:text="@string/btnIngresar"
            android:textColor="@color/colorWhite"
            android:typeface="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblO"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/lblIngresarGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblOtroInicio"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:typeface="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />



        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblNoTienesCuenta"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/lblCrearCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblRegistrarse"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:typeface="normal" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>