<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecuperarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBtnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            app:tint="@color/colorWhite"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Recuperar Contraseña"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEFF1"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="300dp"
            android:layout_height="85dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/user_img" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlack"
            android:ems="10"
            android:hint="@string/txtCorreo"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#595353" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/lblEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnRecuperar"
            android:layout_width="347dp"
            android:layout_height="39dp"
            android:background="@drawable/button_rounded_border"
            android:text="@string/texto_recuperar"
            android:textColor="@color/colorPrimary"
            android:typeface="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblAyuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_ayuda"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>