<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".RegistrarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBtnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:tint="@color/colorPrimaryDark"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lblRegistrarse"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="300dp"
            android:layout_height="85dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/user_img" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlack"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textColorHint="#595353" />

        <EditText
            android:id="@+id/txtCorreoNuevo"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlack"
            android:ems="10"
            android:hint="@string/txtCorreo"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textColorHint="#595353" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtPassword1"
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:hint="@string/txtContraseña"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="#595353" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationViewOjo"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/show_pass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtPasswordAgain"
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorBlack"
                android:ems="10"
                android:hint="Repetir Contraseña"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHint="#595353" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationViewOjoRepetir"
                android:layout_width="47dp"
                android:layout_height="match_parent"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/show_pass" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="347dp"
            android:layout_height="39dp"
            android:background="@drawable/button_rounded"
            android:text="Registrarse"
            android:textColor="@color/colorWhite" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/lblAyuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAyuda"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

    </LinearLayout>
</LinearLayout>